fix style on mobile

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -47,6 +47,7 @@ html, body {
     position: relative;
 }
 #background {
+    margin: 0;
     position: fixed;
     z-index: -2;
     top: 50%;
@@ -68,6 +69,7 @@ html, body {
     width: 100%;
     max-width: 760px;
     font-size: 14px;
+    word-break: break-all;
 }
 .footer a {
     display: block;
